--- a/Birthday gift site/index.html
+++ b/Birthday gift site/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Nick's birthday 🎉</h1>
+            <h1>Today is Luffy's birthday 🎉</h1>
             <img id="bff-img" src="images/luffy.jfif">
             <h2 id="bday-age">21 years old</h2>
             <h4 id="bday-date">09.07.2023</h4>
